--- a/src/main/resources/templates/thymeleaf/fo/deal/dealReg.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/dealReg.html
@@ -338,26 +338,6 @@
 			<div class="modal-body" >
 				<div class="md-box-1">
 					<h4 class="infat-h4"><span class="c-red">판매</span>하시기 전에 꼭 확인을 해주세요. </h4>
-				
-					<!-- <div class="modal-demo-2">
-						<div class="modmo-left"><img src="/resources/img/mypage/img-bg-2.png" class="" /></div>
-						<div class="modmo-right">
-							<h3>이용은(Lee Yong-eun)</h3>
-							<h4>작품명 : 코끼리</h4>
-							<div class="md2-list">
-								<span class="md2-sp1">제작년도</span> : <span class="md2-sp2">2022</span>
-							</div>
-							<div class="md2-list">
-								<span class="md2-sp1">소재/기법</span> : <span class="md2-sp2">한지에 채색, 금</span>
-							</div>
-							<div class="md2-list">
-								<span class="md2-sp1">액자</span> : <span class="md2-sp2">없음</span>
-							</div>
-							<div class="md2-list">
-								<span class="md2-sp1">사이즈</span> : <span class="md2-sp2">72.7 X 100</span>
-							</div>
-						</div>
-					</div> -->
 					
 					<div class="wrapper center-block">
 							<div class="panel-group2" id="accordion" role="tablist" aria-multiselectable="true">
@@ -504,7 +484,7 @@
 							    </div>
 							    <div id="collapseThree" class="panel-collapse2 collapse" role="tabpanel" aria-labelledby="headingThree">
 							      <div class="panel-body">
-							       <div class="coll-text" style="overflow:auto;">
+							       <div class="coll-text">
 										■페널티 규정 <br/>
 										판매자와 구매자의 안전한 거래를 위해 아래 사유에 따라 거래 철회비가 부과됩니다.<br/>
 										<table class="tstyle4">
