--- a/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_buy.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_buy.html
@@ -379,7 +379,7 @@
 							<div class="bat-box5">
 								<!-- <a href="#" class="ba-btn1" id="btn_payment" style="display:none;" onclick="call(200)"><span>결제하기</span></a> -->
 								<a href="#" class="ba-btn1" id="btn_payment" style="display:none;" onclick="btn_payment()"><span>결제하기</span></a>
-								<a href="javascript:location.href='/myDeal';" class="ba-btn2" ><span>거래 내역 돌아가기</span></a>
+								<a href="javascript:location.href='/myDeal';" class="ba-btn2" ><span>돌아가기</span></a>
 							</div>
 						</div>
 						
