--- a/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_sell.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_sell.html
@@ -197,7 +197,7 @@
 							</div>
 							
 							<!-- 2차 결제 완료 -->
-							<div id="2PC" style="display:none;" th:if="${not #maps.isEmpty(result.payMntInfo)}>
+							<div id="2PC" style="display:none;" th:if="${not #maps.isEmpty(result.payMntInfo)}">
 								<div class="med">
 									<h2 class="h2-con">결제 정보</h2>
 								</div>
@@ -328,7 +328,7 @@
 					
 							<div class="bat-box5">
 								<a href="#" class="ba-btn1" id="btn_payment" style="display:none;" onclick="btn_payment()"><span>결제하기</span></a>
-								<a href="javascript:location.href='/myDeal';" class="ba-btn2" ><span>거래 내역 돌아가기</span></a>
+								<a href="javascript:location.href='/myDeal';" class="ba-btn2" ><span>돌아가기</span></a>
 							</div>
 						</div>
 						
