--- a/src/main/resources/templates/thymeleaf/fo/myPage/myGallery_myCollection.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myGallery_myCollection.html
@@ -173,11 +173,11 @@ function myCollectionList(){
 					} else {
 						html += '<h4>입찰가 0 KRW</h4>';
 					}
- 				html += '			<p class="ts-2">';
+ 				/* html += '			<p class="ts-2">';
  				html += '			'+ result[i].dealStrtDate +' – '+ result[i].dealEndngDate +'<br/>';
  				html += '			응찰수 : '+ result[i].bidCnt +'<br/>';
  				html += '			'+ result[i].dealRemainingDay +'일 '+ result[i].dealRemainingHour +'시 '+ result[i].dealRemainingMin +'분 '+ result[i].dealRemainingSec +'초';
- 				html += '			</p>';
+ 				html += '			</p>'; */
  			}
 				
 				html += '</div>'
