--- a/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_buy.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_buy.html
@@ -156,7 +156,7 @@
 													<th><span class="my-red">쿠폰 선택</span></th>
 													<td class="pd_t17">
 														<div class="selec-box bg-st">
-															<select class="selectpicker" id="sbx_couponList_DD" data-width="480px" disabled>
+															<select class="selectpicker" id="sbx_couponList_DD" style="min-width:300px !important;" disabled>
 																<option value="null">-선택-</option>
 															</select>
 														</div>
@@ -191,14 +191,14 @@
 												<th><span class="my-red">부가서비스(필수)</span></th>
 												<td class="pd_t17">
 													<div class="selec-box bg-st">
-														<select class="selectpicker" id="sbx_trnsprtTypCd" data-width="480px">
+														<select class="selectpicker" id="sbx_trnsprtTypCd" style="min-width:300px !important;">
 															<option value="null">-선택-</option>
 															<option value="P">프리미엄운송</option>
 															<option value="D">직접운송</option>
 														</select>
 													</div>
 													<div class="selec-box bg-st">
-														<select class="selectpicker" id="sbx_trnsprtAreaCd" data-width="480px">
+														<select class="selectpicker" id="sbx_trnsprtAreaCd" style="min-width:300px !important;">
 															<option value="null">-선택-</option>
 															<option value="MA">수도권</option>
 															<option value="NA">비수도권</option>
@@ -212,7 +212,7 @@
 												<th><span class="my-red">부가서비스(선택)</span></th>
 												<td class="pd_t17">
 													<div class="selec-box bg-st">
-														<select class="selectpicker" id="sbx_trnsprtServiceCd" data-width="480px" disabled>
+														<select class="selectpicker" id="sbx_trnsprtServiceCd" style="min-width:300px !important;" disabled>
 															<option value="null">-선택-</option>
 														</select>
 													</div>
@@ -224,7 +224,7 @@
 												<th><span class="my-red">쿠폰 선택</span></th>
 												<td class="pd_t17">
 													<div class="selec-box bg-st">
-														<select class="selectpicker" id="sbx_couponList_TD" data-width="480px" disabled>
+														<select class="selectpicker" id="sbx_couponList_TD" style="min-width:300px !important;" disabled>
 															<option value="null">-선택-</option>
 														</select>
 													</div>
