--- a/src/main/resources/templates/thymeleaf/footer.html
+++ b/src/main/resources/templates/thymeleaf/footer.html
@@ -34,7 +34,7 @@
 					<div class="footer-text">
 						<ol>
 							<li>통신판매업 신고 : 제 2019-서울마포-1063호</li>
-							<li>개인정보관리책임자 : 이영선(privacy@mainsion9.co.kr</li>
+							<li>개인정보관리책임자 : 이영선(help@dealing-art.com),이영중(privacy@dealing-art.com)</li>
 							<li>이메일 : cafe24@mainsion9.co,kr</li>
 						</ol>
 					</div>
@@ -53,7 +53,7 @@
 					<div class="footer-text">
 						<ol>
 							<li class="af-dn">통신판매업 신고 : 제 2019-서울마포-1063호</li>
-							<li>개인정보관리책임자 : 이영선(privacy@mainsion9.co.kr 이메일 : cafe24@mainsion9.co,kr</li>
+							<li>개인정보관리책임자 : 이영선(help@dealing-art.com),이영중(privacy@dealing-art.com) 이메일 : cafe24@mainsion9.co,kr</li>
 						</ol>
 					</div>
 				</div>
@@ -66,6 +66,9 @@
 							<li class="dib af-dn">대표번호 : 1533-3024</li>
 							<li class="af-dn">팩스번호 : 02-336-2920</li>
 							<li class="af-dn">이메일 : cafe24@mainsion9.co,kr</li>
+							<li class="af-dn">개인정보관리책임자</li> 
+							<li> - 이영선(help@dealing-art.com) </li>
+							<li> - 이영중(privacy@dealing-art.com)</li>
 						</ol>
 					</div>
 				</div>
