--- a/src/main/resources/templates/thymeleaf/index.html
+++ b/src/main/resources/templates/thymeleaf/index.html
@@ -110,7 +110,7 @@
 			<!-- hotest deal 스와이퍼 -->
 			<div class="contents max-1500 hotestDeal">
 				<div class="cont-title">
-					<h3>hotest deal</h3>
+					<h3>Hot deal</h3>
 				</div>
 				<div class="swi-box">
 					<div class="swiper mySwiper2">
@@ -135,7 +135,8 @@
 			<!-- Dealing Art Insights -->
 			<div class="contents max-1500  DealingArtInsights">
 				<div class="cont-title ta-t60">
-					<h3>Dealing Art <span class="ta-no"><br/></span>Insights</h3>
+					<!-- <h3>Dealing Art <span class="ta-no"><br/></span>Insights</h3> -->
+					<h3>Magazine9</h3>
 				</div>
 				<div class="swi-box">
 					
